--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -52,7 +52,7 @@ jobs:
             --timeout=9 \
             --durations=10 \
             -n auto \
-            --cov custom_components.sandman_doppler \
+            --cov custom_components.integration_blueprint \
             -o console_output_style=count \
             -p no:sugar \
             tests
