services.yaml:  Added a few things to match zwave_js

--- a/custom_components/sandman_doppler/services.yaml
+++ b/custom_components/sandman_doppler/services.yaml
@@ -2,6 +2,9 @@ testservice:
   name: Test Service
   description: Test
   target:
+    entity:
+      domain: test
+      integration: sandman_doppler
     fields:
       test_field:
         name: Testfield
