services.yaml: try time-selector

--- a/custom_components/sandman_doppler/services.yaml
+++ b/custom_components/sandman_doppler/services.yaml
@@ -3,7 +3,6 @@ testservice:
   description: Test
   target:
     entity:
-      domain: test
       integration: sandman_doppler
   fields:
     test_field:
@@ -13,10 +12,10 @@ testservice:
       advanced: false
       example: "low"
       default: "high"
-      selector:
-        select:
-          options:
-            - "off"
-            - "low"
-            - "medium"
-            - "high"
+      time-selector:
+#        select:
+#          options:
+#            - "off"
+#            - "low"
+#            - "medium"
+#            - "high"
