__init__.py: spelled test_field right. Sevices.yaml time selector

--- a/custom_components/sandman_doppler/services.yaml
+++ b/custom_components/sandman_doppler/services.yaml
@@ -12,7 +12,8 @@ testservice:
       advanced: false
       example: "low"
       default: "high"
-      time-selector:
+      selector:
+        time:
 #        select:
 #          options:
 #            - "off"
