__init__.py,const.py,number.py Added Timeoffset device.  services.yaml fixed typo

--- a/custom_components/sandman_doppler/services.yaml
+++ b/custom_components/sandman_doppler/services.yaml
@@ -22,7 +22,7 @@ timezoneservice:
       integration: sandman_doppler
   fields:
     timezone:
-      name: timezone
+      name: Timezone
       description: Timezone to set
       required: true
       advanced: false
