--- a/custom_components/sandman_doppler/services.yaml
+++ b/custom_components/sandman_doppler/services.yaml
@@ -1,13 +1,10 @@
 setalarmservice:
   name: Set Alarm
   description: Sets an Alarm on the Doppler
+  target:
+    device:
+      integration: sandman_doppler
   fields:
-    doppler_device_id:
-      name: Doppler ID
-      description: ID of doppler to set alarm
-      selector:
-        device:
-          integration: sandman_doppler
     alarm_time:
       name: Alarm Time
       description: The time of the alarm to set
