__init__.py, services.yaml: added logging and fixed miscapitalization of sparkle options

--- a/custom_components/sandman_doppler/services.yaml
+++ b/custom_components/sandman_doppler/services.yaml
@@ -345,9 +345,9 @@ setlightbarcolorservice:
       selector:
         select:
           options:
-            - Low
-            - Medium
-            - High
+            - low
+            - medium
+            - high
     lightbar_rainbow:
       name: Rainbow
       description: Replaces specified palette with rainbow effect
