__init__.py, services.yaml:  Stopped not passing speed.  back to required default 1

--- a/custom_components/sandman_doppler/services.yaml
+++ b/custom_components/sandman_doppler/services.yaml
@@ -709,6 +709,7 @@ setlightbarblinkservice:
       description: Speed of lightbar effect
       required: false
       advanced: false
+      default: 1
       selector:
         number:
           min: 0
