__init__.py, services.yaml:  fixed bad dictionary reference made speed required

--- a/custom_components/sandman_doppler/services.yaml
+++ b/custom_components/sandman_doppler/services.yaml
@@ -707,7 +707,7 @@ setlightbarblinkservice:
     lightbar_speed:
       name: Speed
       description: Speed of lightbar effect
-      required: false
+      required: true
       advanced: false
       default: 1
       selector:
