__init__.py, services.yaml:  Added size parameter to sweep correctly

--- a/custom_components/sandman_doppler/services.yaml
+++ b/custom_components/sandman_doppler/services.yaml
@@ -1159,7 +1159,7 @@ setlightbarsweepservice:
           mode: box
     lightbar_size:
       name: Size
-      description: Size of Comet
+      description: Size of Sweep
       required: false
       advanced: false
       selector:
@@ -1169,7 +1169,7 @@ setlightbarsweepservice:
           mode: box
     lightbar_direction:
       name: Direction
-      description: Direction of comet
+      description: Direction of Sweep
       required: false
       advanced: false
       selector:
