__init__.py, services.yaml: implemented set display brightness service

--- a/custom_components/sandman_doppler/services.yaml
+++ b/custom_components/sandman_doppler/services.yaml
@@ -1224,3 +1224,65 @@ setdisplaycolorservice:
       advanced: false
       selector:
         color_rgb:
+setbuttoncolorservice:
+  name: Set Button Color
+  description: Sets Button color for day or night mode
+  fields:
+    doppler_device_id:
+      name: Doppler ID
+      description: ID of doppler to set color
+      required: true
+      advanced: false
+      selector:
+        device:
+          integration: sandman_doppler
+    button_day_or_night:
+      name: Day or Night
+      description: Whether to set color for day or night mode
+      required: true
+      advanced: false
+      selector:
+        select:
+          options:
+            - Day
+            - Night
+    button_color:
+      name: Button Color
+      description: Color to which to set the buttons
+      required: true
+      advanced: false
+      selector:
+        color_rgb:
+
+setdisplaybrightnessservice:
+  name: Set Display Brightness
+  description: Sets display color for day or night mode
+  fields:
+    doppler_device_id:
+      name: Doppler ID
+      description: ID of doppler to set color
+      required: true
+      advanced: false
+      selector:
+        device:
+          integration: sandman_doppler
+    display_day_or_night:
+      name: Day or Night
+      description: Whether to set brightness for day or night mode
+      required: true
+      advanced: false
+      selector:
+        select:
+          options:
+            - Day
+            - Night
+    display_brightness:
+      name: Display Brightness
+      description: Brightness to which to set the display 
+      required: true
+      advanced: false
+      selector:
+        number:
+          min: 0
+          max: 100
+          mode: box
