--- a/custom_components/sandman_doppler/manifest.json
+++ b/custom_components/sandman_doppler/manifest.json
@@ -2,7 +2,7 @@
   "domain": "sandman_doppler",
   "name": "Sandman Doppler",
   "documentation": "https://github.com/pa-innovation/ha-doppler",
-  "iot_class": "cloud_polling",
+  "iot_class": "local_polling",
   "issue_tracker": "https://github.com/pa-innovation/ha-doppler/issues",
   "version": "0.0.0",
   "config_flow": true,
